# Singlets

./: CMakeLists.txt  README  analyseAndResume.sh
essentials/: Field.cpp  Field.hpp  NormField.cpp  NormField.hpp  OpticalFlow.cpp  OpticalFlow.hpp  Polynome.cpp  Polynome.hpp  Projection.cpp  Projection.hpp  Singularity.cpp  Singularity.hpp  projectedOptFlow.cpp  projectedOptFlow.hpp  rgmc.cpp  rgmc.hpp
src/: computeChains.cpp  computeChainsAnalysis.cpp  homographie.cpp  mainSeeFlowMap.cpp  motionCompensation_avec_RGMC_Et_stabilisation.cpp  quantityOfSing.cpp  ralentiHisto.cpp  readerVideo.cpp  saliant.cpp  saliantShort.cpp  saturation_Median.cpp  shortenizer.cpp  singularity.cpp
